Add getProjectSettings by ProjectId
